--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "selenium-webdriver": "^4.0.0-alpha.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
+  },
+  "release": {
+    "branch": "cg-master"
   }
 }
