--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "devDependencies": {
     "@types/chai": "^4.1.5",
     "@types/jasmine": "^3.3.0",
+    "@types/node": "12.0.3",
+    "typescript": "3.2.4",
     "chai": "^4.1.2",
     "express": "^4.16.4",
     "jasmine": "^3.3.0",
@@ -39,6 +41,7 @@
     "jasmine-spec-reporter": "^4.2.1",
     "mocha": "^5.2.0",
     "protractor": "^5.4.1",
+    "browserify": "16.2.3",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
