--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsgantt-improved",
-  "version": "2.0.10-cg",
+  "version": "2.0.9-cg.1",
   "description": "jsgantt-improved",
   "main": "dist/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "test": "node node_modules/.bin/protractor protractor.conf.js",
     "test-unit": "mocha -r ts-node/register test/**.ts",
     "browserify": "browserify dist/index.js --standalone JSGantt > jsgantt.js",
-    "dist": "npm run build && npm run browserify && cp src/jsgantt.css dist/ && cp jsgantt.js dist/ && cp jsgantt.js docs/ && cp src/jsgantt.css docs/ && echo 'DIST finished'",
+    "dist": "npm run build && npm run browserify && cpx src/jsgantt.css dist/ && cpx jsgantt.js dist/ && cpx jsgantt.js docs/ && cpx src/jsgantt.css docs/ && echo 'DIST finished'",
     "publish-npm": "npm run dist && npm publish",
     "demo": "nodemon server.js",
     "demo-full": "npm run dist && npm run demo",
@@ -33,7 +33,7 @@
     "@types/chai": "^4.1.5",
     "@types/jasmine": "^3.3.0",
     "@types/node": "12.0.3",
-    "typescript": "3.2.4",
+    "typescript": "^3.0.3",
     "chai": "^4.1.2",
     "express": "^4.16.4",
     "jasmine": "^3.3.0",
@@ -44,12 +44,12 @@
     "browserify": "16.2.3",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.0.3"
+    "cpx": "^1.5.0"
   },
   "release": {
     "branch": "cg-master"
   },
   "publishConfig": {
-    "registry": "http://repo.cg.ru/repository/npm-private/"
+    "registry": "https://repo.micord.ru/repository/npm-private/"
   }
 }
